# ppm

./: Cargo.toml  README.md
src/: basic_command.rs  block_command.rs  invoke.rs  lib.rs  predefined_commands.rs  shell_util.rs  strvar.rs  util.rs
src/predefined_commands/: basic.rs  block.rs  for.rs  for_loop.rs  lsdir.rs  mod.rs  regex.rs  tools.rs
src/predefined_commands_old/: basic.rs  block.rs  for.rs  lsdir.rs  regex.rs
src/specific_commands/: forfiles.rs  mod.rs  repeat.rs
