[package]
name = "ppm"
version = "0.1.1"
authors = ["T0mstone <realt0mstone@gmail.com>"]
edition = "2018"

[[bin]]
name = "test_main"
doc = false

[dependencies]

[dependencies.tlib]
git = "git://github.com/T0mstone/tlib"
features = ["use_std"]

[dependencies.regex]
version = "1.3.7"
optional = true