[package]
name = "ppm"
version = "0.4.0"
authors = ["T0mstone <realt0mstone@gmail.com>"]
edition = "2018"

[[bin]]
name = "test_main"
doc = false

[dependencies]

[dependencies.tlib]
#git = "git://github.com/T0mstone/tlib"
#rev = "a1c873b865cecd7af664f46771f915b4b1b83295"
path = "../tlib"
features = ["use_std"]

[dependencies.regex]
version = "1.3.7"
optional = true