[package]
name = "ppm"
version = "0.5.0"
authors = ["T0mstone <realt0mstone@gmail.com>"]
edition = "2018"

[[bin]]
name = "test_main"
doc = false

[dependencies]

[dependencies.tlib]
git = "git://github.com/T0mstone/tlib"
rev = "048f9005b8512f79a615b2bfdce98ed8993dc7d5"
#path = "../tlib" # for development purposes (on my machine)
features = ["use_std"]

[dependencies.regex]
version = "1.3.7"
optional = true